[tool.poetry]
name = "golden-beach"
version = "0.1.1"
description = ""
authors = ["David <dave.hankin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
numpy = "^2.1.1"
mkdocs-material = "^9.5.34"
mkdocstrings-python = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
